--- a/src/app/contacto/contacto.page.html
+++ b/src/app/contacto/contacto.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons slot="start" >
+    <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
@@ -12,84 +12,18 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">contacto</ion-title>
+      <ion-title size="large">Contacto</ion-title>
     </ion-toolbar>
   </ion-header>
- 
-    
-    <ion-content class="ion-padding">
-      <ion-list>
-        <ion-item >
-          <ion-icon name="person-outline" class="icon-espacio" ></ion-icon> 
-          <ion-label>Junior Jean</ion-label>
 
-          <ion-button class="call-button">
-            <ion-icon name="call-outline"></ion-icon>
-            
-          </ion-button>
-          <ion-button class="delete-button">
-            <ion-icon name="trash-outline"></ion-icon>
-            
-          </ion-button>
-          
-          
-        </ion-item>
-        <ion-item>
-          <ion-icon name="person-outline" class="icon-espacio1" ></ion-icon>
-          <ion-label>Fidel Castro</ion-label>
-          <ion-button class="call-button">
-            <ion-icon name="call-outline"></ion-icon>
-            
-          </ion-button>
-          <ion-button class="delete-button">
-            <ion-icon name="trash-outline"></ion-icon>
-            
-          </ion-button>
-          
-        </ion-item>
-        <ion-item>
-          <ion-icon name="person-outline" class="icon-espacio2" ></ion-icon>
-          <ion-label>Lovena Andre</ion-label>
-          <ion-button class="call-button">
-            <ion-icon name="call-outline"></ion-icon>
-            
-          </ion-button>
-          <ion-button class="delete-button">
-            <ion-icon name="trash-outline"></ion-icon>
-            
-          </ion-button>
-          
-          
-        </ion-item>
-        <ion-item>
-          <ion-icon name="person-outline" class="icon-espacio3" ></ion-icon>
-          <ion-label>Guy Phillipe</ion-label>
-          <ion-button class="call-button">
-            <ion-icon name="call-outline"></ion-icon>
-            
-          </ion-button>
-          <ion-button class="delete-button">
-            <ion-icon name="trash-outline"></ion-icon>
-            
-          </ion-button>
-          
-        </ion-item>
-        <ion-item>
-          <ion-icon name="person-outline" class="icon-espacio4" ></ion-icon>
-          <ion-label>Martely Joseph</ion-label>
-          <ion-button class="call-button">
-            <ion-icon name="call-outline"></ion-icon>
-            
-          </ion-button>
-          <ion-button class="delete-button">
-            <ion-icon name="trash-outline"></ion-icon>
-            
-          </ion-button>
-          
-        </ion-item>
-      </ion-list>
-      <app-buton-agregar/>
-    </ion-content>
-    
-    
+  <ion-list>
+    <ion-item *ngFor="let contact of contacts">
+      <ion-label>
+        <h2>{{ contact.name }}</h2> <!-- Cambia aquí según la estructura del contacto -->
+        <p *ngIf="contact.phones?.length">{{ contact.phones[0].number }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+
+  <app-buton-agregar></app-buton-agregar>
 </ion-content>
