--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,8 +29,9 @@
       <p>Cargando...</p>
     </div>
   
-    <ion-button class="round">
-      <span class="button-text">Activar Emergencia</span>
+    <ion-button class="round" color="danger">
+      <ion-icon slot="icon-only" name="heart"></ion-icon>
     </ion-button>
+    
   </div>
 </ion-content>
