--- a/src/app/contacto/contacto.page.html
+++ b/src/app/contacto/contacto.page.html
@@ -1,29 +1,33 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>
-      QuickHelp
-    </ion-title>
+    <ion-title>Contactos</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Contacto</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
+<ion-content>
+  <!-- Lista de contactos guardados -->
   <ion-list>
-    <ion-item *ngFor="let contact of contacts">
+    <ion-item *ngFor="let contact of savedContacts">
+      <ion-avatar slot="start" class="large-avatar">
+        <ion-icon name="person-circle"></ion-icon>
+      </ion-avatar>
       <ion-label>
-        <h2>{{ contact.name }}</h2> <!-- Cambia aquí según la estructura del contacto -->
-        <p *ngIf="contact.phones?.length">{{ contact.phones[0].number }}</p>
+        <h2>{{ contact.name }}</h2>
+        <p>{{ contact.phone }}</p>
       </ion-label>
+      <ion-button color="danger" fill="clear" (click)="confirmDelete(contact)">
+        🗑️
+      </ion-button>
+      <ion-button fill="clear" (click)="selectFavorite(contact)">
+        <ion-icon [name]="favoriteContact?.phone === contact.phone ? 'star' : 'star-outline'" color="warning"></ion-icon>
+      </ion-button>
     </ion-item>
   </ion-list>
 
-  <app-buton-agregar></app-buton-agregar>
+  <!-- Botón flotante para cargar contactos del dispositivo -->
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="loadDeviceContacts()">
+      <ion-icon name="add"></ion-icon> <!-- Usando un ícono de Ionicons -->
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
