--- a/src/app/contacto/contacto.page.scss
+++ b/src/app/contacto/contacto.page.scss
@@ -1,31 +1,51 @@
-.icon-espacio {
-    margin-right: 10px; 
-    color: rgb(255, 0, 0);
-  }
 
-  .icon-espacio1 {
-    margin-right: 10px; 
-    color: aqua;
-
-  }
-
-    .icon-espacio2 {
-        margin-right: 10px; 
-        color: blue;
-    
-  }
-
-  .icon-espacio3 {
-    margin-right: 10px; 
-    color: rgb(238, 255, 0);
-  }
-
-  .icon-espacio4 {
-    margin-right: 10px; 
-    color: rgb(0, 255, 72);
-  }
 
   .call-button{
     margin-right: 10px; 
   }
- 
+ /* Botón flotante */
+ion-fab {
+  z-index: 10;
+}
+
+/* Botón para guardar contactos seleccionados */
+.save-button {
+  margin: 20px;
+  font-weight: bold;
+  font-size: 1rem;
+  text-transform: uppercase;
+  --background: #4caf50; /* Verde */
+  --background-hover: #45a049;
+  --color: white;
+}
+
+/* Estilo de la lista */
+ion-list {
+  margin: 20px;
+}
+
+ion-item {
+  border-bottom: 1px solid #ccc;
+}
+
+ion-fab-button {
+  font-size: 24px;
+  color: white;
+  margin-top: -150px; 
+  width: 80px; 
+  height: 80px; 
+  margin-left: -20px; 
+}
+
+ion-fab-button ion-icon {
+  font-size: 48px; 
+}
+
+ion-button {
+  margin: 5px;
+}
+
+.large-avatar {
+  --width: 120px;
+  --height: 120px;
+}
