--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,40 +1,33 @@
 <ion-header [translucent]="true">
-  <ion-toolbar >
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-  
-    
-   <ion-toolbar class="quickhelp">
-    
-      <ion-title class="help" >QuickHelp</ion-title >
-    
-   </ion-toolbar>
-    
+    <ion-title>QuickHelp</ion-title>
   </ion-toolbar>
 </ion-header>
 
-
 <ion-content [fullscreen]="true">
   <div id="container">
+    <!-- Error Message -->
     <div *ngIf="errorMessage">
       <p>{{ errorMessage }}</p>
     </div>
-    
+
+    <!-- Display Location and Weather -->
     <div *ngIf="!errorMessage && location && weather">
       <h2>{{ location.address.road }} {{ location.address.house_number }}</h2>
-      
       <p>Comuna {{ location.address.city || location.address.neighborhood }}</p>
-      
-
       <p class="p">Temperatura Actual: {{ weather.main.temp }} °C</p>
     </div>
-  
+
+    <!-- Loading Message -->
     <div *ngIf="!errorMessage && (!location || !weather)">
       <p>Cargando...</p>
     </div>
-  
-    <ion-button class="round">
+
+    <!-- Emergency Button -->
+    <ion-button (click)="enviarSms()" class="round">
       <span class="button-text">Activar Emergencia</span>
     </ion-button>
   </div>
