implementacion de historial

--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -62,5 +62,7 @@
         <ion-icon name="create"></ion-icon>
       </ion-fab-button>
     </ion-fab>
+
+    <ion-button routerLink="/historial" class="save-button"> Historial de Emergencias </ion-button>
   </ng-container>
 </ion-content>
